# minotaur

./: .dockerignore  .gitignore  AGENT.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  alive2-calculate-and-init-constants.patch  alive2-fromfloat-line453.patch  exact-sdiv-unsigned-compare-report.md  flake.nix  llvm-main-minotaur.patch  pinned-deps.env  uitofp_fmul_96_instances.txt
.github/patches/: alive2-reset-llvm-utils-cache.patch
.github/scripts/: build.sh
.github/workflows/: build.yml  docker-build.yml
cmake/: FindAlive2.cmake  run-check.cmake.in
include/: AliveInterface.h  Config.h  ConstantSynthesis.h  EnumerativeSynthesis.h  Expr.h  GetCost.h.in  IR.h  LLVMGen.h  Lexer.h  MachineCost.h  Parse.h  Slice.h  Tokens.h  Type.h  Utils.h  alive-interface.h  codegen.h  config.h  cost-command.h  cost-command.h.in  cost.h  enumerator.h  expr.h  fp-domain.h  interp.h  lexer.h  machine-cost.h  parse.h  removal-slice.h  rewrite-ordering.h  slice.h  synthesis.h  tokens.h  type.h  utils.h
lib/: AliveInterface.cpp  Config.cpp  ConstantSynthesis.cpp  ConstantSynthesis.h  EnumerativeSynthesis.cpp  EnumerativeSynthesis.h  Expr.cpp  IR.cpp  IR.h  LLVMGen.cpp  LLVMGen.h  Lexer.re  MachineCost.cpp  Parse.cpp  Pass.cpp  SIMDBinOp.cpp  SIMDBinOp.h  Slice.cpp  Type.cpp  Utils.cpp  alive-interface.cpp  codegen.cpp  config.cpp  cost.cpp  enumerator.cpp  expr.cpp  fp-domain.cpp  interp.cpp  lexer.re  machine-cost.cpp  parse.cpp  removal-slice.cpp  rewrite-ordering.cpp  slice.cpp  synthesis.cpp  type.cpp  utils.cpp
pass/: cache-exprs.cpp  online.cpp
pass/stat/: CMakeLists.txt  HelloWorld.cpp
scratch/: a.ll  avx512skx-i16x32.ll  b.ll  data_dep.py  intrinsics.lst  result.ll  slice2.ll  sse4-i8x16.ll  test-pack.c  width_works.py
scratch/convolve/: convolve8_16_avx2.c  convolve8_16_avx2.ll  convolve8_16_avx2.s  convolve8_16_avx2_new.ll
scratch/kernels/: diff-sliced.ll  diff.c  diff.ll  hadamard_highbd_col8_first_pase.c  reduce.c  reduce.ll
scratch/kernels/diff/: diff.c  diff.constsyn.ll  fast.S  slow.S
scratch/slice/: slice-c1.c  slice-c2.c  slice-c3.c  slice-c4.c  slice-c5.c  slice-c6.c  slice-c7.c  slice-ll1.ll  slice-ll10.ll  slice-ll11.ll  slice-ll12.ll  slice-ll13.ll  slice-ll3.ll  slice-ll4.ll  slice-ll5.ll  slice-ll6.ll  slice-ll7.ll  slice-ll8.ll  slice-ll9.ll
scratch/verticalmerge/: fast.s  merge-driver.c  merge-two-vectors.ll  merge-two-vectors.s  merge.c  merge.ll  merge.s  slow.s  verticalmerge.c  verticalmergefast.ll  verticalmergeslow.ll
scripts/: cache-dump.in  cache-infer.in  get-cost.in  infer-cut.sh.in  minotaur-cc.in  minotaur_redis.py  opt-minotaur.sh.in  opt-synthesis.sh.in  slice-cc.in
tests/: addsub.ll  and0.syn.ll  and1.syn.ll  and2.syn.ll  and3.syn.ll  divergence.ll  exact_ashr_threshold.syn.ll  exact_sdiv_signbit.syn.ll  fcmp_or.syn.ll  icmp0.syn.ll  icmp1.syn.ll  icmp_samesign_depth1.syn.ll  icmp_samesign_depth2.syn.ll  icmp_samesign_depth3.syn.ll  icmp_samesign_prefer.syn.ll  issue_16.syn.ll  lit.cfg.py  negated_subtraction.syn.ll  nop1.syn.ll  nop2.syn.ll  nop4.syn.ll  nop6.syn.ll  nop7.syn.ll  nop8.syn.ll  or0.syn.ll  reverse1.syn.ll  reverse2.syn.ll  select0.syn.ll  select1.syn.ll  sub0.syn.ll  sub1.syn.ll  syn_add1.syn.ll  syn_add2.syn.ll  syn_add3.syn.ll  syn_add4.syn.ll  syn_ashr1.ll  syn_ashr1.syn.ll  syn_ashr2.ll  syn_ashr2.syn.ll  syn_const_bitmask0.syn.ll  (+53 more)
tests/const/: const0.syn.ll  const1.syn.ll  control0.ll  diff1.constsyn.ll  diff2.constsyn.ll  fadd2.constsyn.ll  fcmp1.constsyn.ll  fcmp2.constsyn.ll  fmul1.constsyn.ll  fmul2.constsyn.ll  fmul3.constsyn.ll  fp1.constsyn.ll  fp2.constsyn.ll  fsub2.constsyn.ll  poison_scalar0.constsyn.ll  poison_vec_float0.constsyn.ll  poison_vec_half0.constsyn.ll  shuffle1.constsyn.ll  shuffle2.constsyn.ll
tests/datamovements/: extractelement0.syn.ll  extractelement1.syn.ll  extractelement2.syn.ll  extractelement3.syn.ll  insertelement0.syn.ll  insertelement1.syn.ll  insertelement10.syn.ll  insertelement11.syn.ll  insertelement2.syn.ll  insertelement3.syn.ll  insertelement4.syn.ll  insertelement5.syn.ll  insertelement6.syn.ll  insertelement7.syn.ll  insertelement8.syn.ll  insertelement9.syn.ll  shuffle1.syn.ll  shuffle2.syn.ll  shuffle3.syn.ll  shuffle4.syn.ll  shuffle5.syn.ll  shuffle6.syn.ll  shuffle7.syn.ll
tests/fp/: case1.syn.ll  case10.syn.ll  case11.syn.ll  case12.syn.ll  case13.syn.ll  case14.syn.ll  case15.syn.ll  case2.syn.ll  case2.syn.skip.ll  case3.syn.ll  case4.syn.ll  case5.syn.ll  case6.syn.ll  case7.syn.ll  case8.syn.ll  case9.syn.ll  copysign0.syn.ll  copysign1.syn.ll  copysign2.syn.ll  fabs0.syn.ll  fabs1.syn.ll  fabs2.syn.ll  fabs3.syn.ll  fabs4.syn.ll  fabs5.syn.ll  fabs6.syn.ll  fabs7.syn.ll  fadd0.syn.ll  fadd1.syn.ll  fadd2.syn.ll  fcmp0.syn.ll  fcmp1.syn.ll  fcmp2.syn.ll  fcmp3.syn.ll  fmul0.syn.ll  fmul0.syn.skip.ll  fneg0.syn.ll  fneg1.syn.ll  fpext0.syn.ll  fptrunc0.syn.ll  (+23 more)
tests/hacks/: abs0.syn.ll  avg0.syn.ll  avg1.syn.ll  blend0.syn.ll  clamp0.syn.ll  demorgan0.syn.ll  demorgan1.syn.ll  isolate_rightmost.syn.ll  ispow2.syn.ll  max0.syn.ll  midpoint0.syn.ll  min0.syn.ll  mul2_bswap_add.syn.ll  mul2_to_shl.syn.ll  nabs0.syn.ll  nlz_to_pop.syn.ll  nor0.syn.ll  not_bswap_and.syn.ll  not_ctlz_and.syn.ll  not_not_and.syn.ll  or_sub_and.syn.ll  pmaddwd-merge.syn.ll  psll.syn.ll  round_pow2.syn.ll  shuffle-ext-to-pmaddwd1.syn.ll  shuffle-ext-to-pmaddwd2.syn.ll  shuffle-ext-to-pmaddwd3.syn.ll  shuffle-ext-to-pmaddwd4.syn.ll  sign0.syn.ll  swap_xor.syn.ll  turn_off_rightmost.syn.ll
tests/lit/lit/: TestRunner.py
tests/lit/lit/formats/: __init__.py  minotaurtest.py  vectorsynthtest.py
tests/memory/: syn_mem2.syn.ll  syn_mem4.syn.ll  syn_mem5.syn.mem.ll  syn_mem7.syn.mem.ll
tests/shuffles/: shuffle1.syn.ll  shuffle2.syn.ll  shuffle6.syn.ll
tools/: alive-cs.cpp  minotaur-cs.cpp  minotaur-slice.cpp  slice-ir.cpp
unit-tests/: alive-compare-tests.cpp  alive-tests.cpp  cost-tests.cpp  enumerator-tests.cpp  fp-domain-tests.cpp  interp-tests.cpp  parse-tests.cpp  rewrite-ordering-tests.cpp
unittests/: ParseTests.cpp
